# semicolon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  lint.sh  premake5.lua  syntax.semi
src/: KaleidoscopeJIT.h  main.cpp
src/ast/: BinaryExprAST.cpp  BinaryExprAST.h  CallExprAST.cpp  CallExprAST.h  ExprAST.h  ForExprAST.cpp  ForExprAST.h  FunctionAST.cpp  FunctionAST.h  IfExprAST.cpp  IfExprAST.h  NumberExprAST.cpp  NumberExprAST.h  PrototypeAST.cpp  PrototypeAST.h  UnaryExprAST.cpp  UnaryExprAST.h  VarExprAST.cpp  VarExprAST.h  VariableExprAST.cpp  VariableExprAST.h  ast.h
src/lexer/: lexer.cpp  lexer.h  tokens.h
src/logger/: logger.cpp  logger.h
src/parser/: parser.cpp  parser.h
src/semicolon/: driver.cpp  driver.h  semicolon.cpp  semicolon.h
